[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Sceans/Offer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sceans/CanvasLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sceans/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sceans/ParallaxBackgroundTest.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sceans/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sceans/Shield.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprite/Безымянный.png" type="Texture" id=8]

[node name="game" type="Node2D" index="0"]

position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="Offer" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 539.187, 516 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CanvasLayer" parent="." index="1" instance=ExtResource( 3 )]

[node name="MenuButton2" parent="CanvasLayer" index="5" instance=ExtResource( 4 )]

[node name="ParallaxBackground" parent="." index="2" instance=ExtResource( 5 )]

[node name="player" parent="." index="3" instance=ExtResource( 6 )]

position = Vector2( -539, -518 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Shield" parent="." index="4" instance=ExtResource( 7 )]

position = Vector2( 539.09, 517.217 )

[node name="PowerTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="EnemyTimer2" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="EnemyTImet3" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="PlayerSpawnTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[node name="Portal" type="Sprite" parent="." index="9"]

visible = false
position = Vector2( 986.187, 300.186 )
texture = ExtResource( 8 )

[node name="EnemyTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = true

[connection signal="pressed" from="CanvasLayer/MenuButton2" to="." method="_on_MenuButton_pressed"]

[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]

[connection signal="timeout" from="EnemyTimer2" to="." method="_on_EnemyTimer2_timeout"]

[connection signal="timeout" from="EnemyTImet3" to="." method="_on_EnemyTImet3_timeout"]

[connection signal="timeout" from="PlayerSpawnTimer" to="." method="_on_PlayerSpawnTimer_timeout"]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]


